--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
+    "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
   }
 }
